--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "start:watch": "node --watch dist/index.js",
-    "start:server": "cross-env DEBUG=W9* PORT=2200 nodemon dist/index.js",
+    "start:server": "cross-env DEBUG=W9* PORT=4545 nodemon dist/index.js",
     "build:dev": "tsc --watch",
-    "build": "tsc",
+    "build": "tsc --watch",
     "start:dev": "concurrently \"npm:start:server\" \"npm:build:dev\"",
     "test": "jest --watchAll --coverage",
     "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests"
@@ -18,6 +18,8 @@
   "author": "Kevin Schans",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.8",
@@ -34,9 +36,10 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
-    "jest": "^25.0.0",
+    "husky": "^8.0.0",
+    "jest": "^29.5.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
   "prettier": {
