--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name:": "202304-proyecto-final-kevin-schans",
   "version": "1.0.0",
-  "description": "202304-proyecto-final-kevin-schans",
+  "description": "Proyecto Final ISDI Coders - Kevin van der Schans Delgado - Backend - 2023",
   "type": "module",
   "main": "index.js",
   "scripts": {
