--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,12 @@
   },
   "extends": ["xo", "prettier"],
   "parser": "@typescript-eslint/parser",
+  "overrides": [
+    {
+      "extends": ["xo-typescript"],
+      "files": ["*.ts", "*.tsx"]
+    }
+  ],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
