--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:watch": "node --watch dist/index.js",
     "start:server": "cross-env DEBUG=W9* PORT=4545 nodemon dist/index.js",
     "build:dev": "tsc --watch",
-    "build": "tsc --watch",
+    "build": "tsc",
     "start:dev": "concurrently \"npm:start:server\" \"npm:build:dev\"",
     "test": "jest --watchAll --coverage",
     "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests"
