--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,8 @@ sonar.organization=isdi-coders-2023
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.test.inclusions=./src/**/*.test.*
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.coverage.exclusions=/src/index.ts, /src/**/*.test.*, /commitlint.config.js, /src/app.ts, /src/config.ts, /src/db/db.connect.ts, /src/repository/user.mongo.model.ts, /src/routers/user.router.ts
