--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:server": "cross-env DEBUG=PF* PORT=4545 nodemon dist/index.js",
     "build:dev": "tsc --watch",
     "build": "tsc",
-    "start:dev": "concurrently \"npm:start:server\" \"npm:build:dev\"",
+    "server": "concurrently \"npm:start:server\" \"npm:build:dev\"",
     "test": "jest --watchAll --coverage",
     "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests"
   },
