--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "author": "Kevin Schans",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
+    "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.2.5",
@@ -36,7 +36,6 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
-    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "ts-jest": "^29.1.0",
@@ -46,19 +45,16 @@
     "singleQuote": true
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
+    "commander": "^10.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
-    "firebase": "^9.22.2",
-    "inquirer": "^9.2.7",
-    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.1"
+    "multer": "^1.4.5-lts.1"
   }
 }
