--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
+    "firebase": "^9.23.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
