--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,5 +14,5 @@ sonar.test.inclusions=./src/**/*.test.*
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-sonar.coverage.exclusions=/src/index.ts, /src/**/*.test.*, /commitlint.config.js, /src/app.ts, /src/config.ts, /src/db/db.connect.ts, /src/entities/user.ts, /src/repository/user.mongo.model.ts, /src/repository/danceCourse.mongo.model.ts, /src/routers/user.router.ts, '/src/routers/danceCourse.router.ts', 'src/services/firebase.ts',
+sonar.coverage.exclusions=/src/index.ts, /src/**/*.test.*, /commitlint.config.js, /src/app.ts, /src/config.ts, /src/db/db.connect.ts, /src/entities/user.ts, /src/repository/user.mongo.model.ts, /src/repository/danceCourse.mongo.model.ts, /src/routers/user.router.ts, '/src/routers/danceCourse.router.ts', 'src/services/firebase.ts', 'src/middleware/files.ts'
 
