--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.gif filter=lfs diff=lfs merge=lfs -text
-public/GIF-home.gif filter=lfs diff=lfs merge=lfs -text
+public/readme-gif-back.gif filter=lfs diff=lfs merge=lfs -text
