Change server status

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "start:watch": "node --watch dist/index.js",
-    "start:server": "cross-env DEBUG=PF* PORT=4545 nodemon dist/index.js",
-    "build:dev": "tsc --watch",
-    "build": "tsc",
-    "server": "concurrently \"npm:start:server\" \"npm:build:dev\"",
-    "test": "jest --watchAll --coverage",
+    "start:new": "node --watch dist/index.js",
+    "server": "cross-env DEBUG=PF* nodemon dist/index.js",
+    "server2": "nodemon dist/index.js",
+    "build": "tsc --watch",
+    "build:prod": "tsc",
+    "start": "concurrently \"npm:server\" \"npm:build\"",
+    "test": "jest --coverage",
     "test:prod": "jest --watchAll --coverage --watchAll=false --passWithNoTests"
   },
   "keywords": [],
