--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name:": "202304-proyecto-final-kevin-schans",
+  "name:": "backend-alex-melanie",
   "version": "1.0.0",
-  "description": "Proyecto Final ISDI Coders - Kevin van der Schans Delgado - Backend - 2023",
+  "description": "Alex & Melanie is a Desktop API Web of an e-commerce of online courses of Latin dances.",
   "type": "module",
   "main": "index.js",
   "scripts": {
